Fix z-index of tutorial elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ button:active {
 	*/
 	left: calc(320px * (var(--scale) - 1));
 	top: calc(320px * (var(--scale) - 1));
-	z-index: -1;
+	z-index: -1000;
 	image-rendering: pixelated;
 	transform: scale(var(--scale));
 }
@@ -658,6 +658,7 @@ header > button {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
+	z-index: 1000;
 	user-select: none; /* Prevent accidental select by spamming the shroud */
 }
 
@@ -674,6 +675,7 @@ header > button {
 	border-radius: 8px;
 	padding: 0.8rem;
 	background-color: white;
+	z-index: 3000;
 	user-select: text; /* Re-enable inherited select on the pop-up directly */
 }
 
